Prevent overflow

--- a/chabadofpicfairvillage.css
+++ b/chabadofpicfairvillage.css
@@ -43,7 +43,7 @@ div#donate-wrapper::after {
   padding-bottom: 30px;
 }
 #donate-wrapper .intro-wrapper {
-  max-width: 800px;
+  max-width: min(800px, 100%);
   margin: auto;
   text-align: left;
   font-size: 16px;
